# spillway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.spillway.yaml  pyproject.toml
.github/workflows/: ci.yaml  pr-lint.yaml  release.yaml
src/spillway/: cli.py  config.py
src/spillway/aws/: client.py  filters.py  findings.py
tests/: test_filter_creation.py
tests/aws/: test_client.py  test_findings.py
