[project]
name = "spillway"
version = "0.0.0"
description = "An automation tool that ingests multi-account AWS Security Hub findings, condenses duplicate alerts, and automatically generates prioritized Jira tasks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.97",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.25.0",
]

[project.scripts]
spillway = "spillway.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "moto>=5.1.22",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package spillway && git add uv.lock && uv build"
commit_parser = "conventional"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
